[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "add-github-topics"
version = "0.1.0"
authors = [
  { name="Ishan Dutta", email="ishandutta2007@gmail.com" },
]
description = "A CLI tool to add topics to a GitHub repository"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/ishandutta2007/add-github-topics"
"Bug Tracker" = "https://github.com/ishandutta2007/add-github-topics/issues"

[project.scripts]
add-github-topic = "add_github_topics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
